--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,6 +26,10 @@ jobs:
     runs-on: ubuntu-latest
     container: swift:6.0-noble
     steps:
+      - name: Set safe Git directory
+        run: git config --global --add safe.directory /__w/jokeAPI/jokeAPI
+      - name: Checkout repository
+        uses: actions/checkout@v3
       - name: Check out toolbox
         uses: actions/checkout@v5
         with:
