--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,8 +26,11 @@ jobs:
     runs-on: ubuntu-latest
     container: swift:6.0-noble
     steps:
-      - name: Set safe Git directory
+      - name: Trust jokeAPI directory
         run: git config --global --add safe.directory /__w/jokeAPI/jokeAPI
+        
+      - name: Checkout temp branch
+        run: git checkout -b temp-branch
       - name: Checkout repository
         uses: actions/checkout@v3
       - name: Check out toolbox
